--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,17 @@
 #alphabet {
+    position: absolute;
     display: inline-block;
+    text-align: center;
+    bottom: 50;
+    width: 100%;
+}
+
+#word {
+    text-align: center;
+    margin-top: 20%;
+}
+
+.btn {
+    width: 40px;
+    margin: 1px;
 }
