--- a/css/style.css
+++ b/css/style.css
@@ -15,10 +15,25 @@ button:not(#replay_button){
 }
 
 #replay_button_div {
+    float: right;
     text-align: center;
 }
 
 #game_container {
+    margin-top: 2%;
+    border-radius: 15px;
     text-align: center;
     background-color: #F5F5DC;
+    display: inline-block;
+    padding: 10px;
+}
+
+#replay_button_div {
+    position: absolute;
+}
+
+body {
+    text-align: center;
+    background-color: #46b8da;
+
 }
