Add modified game logic

--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,6 @@ button:not(#replay_button){
 
 body {
     text-align: center;
-    background-color: #46b8da;
+    background-color: #9cd9b1 ;
 
 }
