--- a/css/style.css
+++ b/css/style.css
@@ -49,14 +49,32 @@ body {
     background-color: #9cd9b1 ;
 }
 
-#signin-form-container {
-    margin-top: 20%;
-    border-radius: 15px;
+.fluff_container {
+    background-color: #F5F5DC;;
+    height: 100%;
+    float: left;
+    width: 50%;
     text-align: center;
+}
+
+.fluff_container > div {
+    margin: auto;
+    margin-top: 20vh;
+}
+
+.auth_container {
+    text-align:center;
+    float: right;
+    width: 50%;
+}
+
+.signin-form-container {
+    border-radius: 15px;
     background-color: #F5F5DC;
-    display: inline-block;
     padding: 10px;
-    width: 500px;
+    width: 500px; 
+    margin: auto;
+    margin-top: 30vh;
 }
 
 .auth-input {
@@ -103,22 +121,9 @@ form {
     font-weight: 800;
 }
 
-.fluff_container {
-    background-color: #F5F5DC;;
-    height: 100%;
-    float: left;
-    width: 50%;
-    text-align: center;
-}
-
-.fluff_container > div {
-    margin-top: 50%;
-}
-
-.auth_container {
-    margin-top: 10%;
-    float: right;
-    width: 50%;
+.fluff_container > img {
+    margin-top: 20%;
+    margin-bottom: auto
 }
 
 .error_message {
