--- a/css/style.css
+++ b/css/style.css
@@ -49,33 +49,60 @@ body {
     background-color: #9cd9b1 ;
 }
 
-.fluff_container {
-    background-color: #F5F5DC;;
-    height: 100%;
-    float: left;
-    width: 50%;
-    text-align: center;
+@media only screen and (max-width: 1270px) {
+    .fluff_container {
+        display: none;
+    }
+    .auth_container {
+        text-align:center;
+    }
+    
+    .signin-form-container {
+        border-radius: 15px;
+        background-color: #F5F5DC;
+        padding: 10px;
+        width: 500px; 
+        margin: auto;
+        margin-top: 2vh;
+    }
 }
+
+@media only screen and (min-width: 1270px) {
+    .fluff_container {
+        background-color: #F5F5DC;;
+        height: 100%;
+        float: left;
+        width: 50%;
+        text-align: center;
+    }
+
+    #mobile_banner {
+        display: none;
+    }
+
+    .auth_container {
+        text-align:center;
+        float: right;
+        width: 50%;
+    }
+    
+    .signin-form-container {
+        border-radius: 15px;
+        background-color: #F5F5DC;
+        padding: 10px;
+        width: 500px; 
+        margin: auto;
+        margin-top: 30vh;
+    }
+}
+
+
 
 .fluff_container > div {
     margin: auto;
     margin-top: 20vh;
 }
 
-.auth_container {
-    text-align:center;
-    float: right;
-    width: 50%;
-}
-
-.signin-form-container {
-    border-radius: 15px;
-    background-color: #F5F5DC;
-    padding: 10px;
-    width: 500px; 
-    margin: auto;
-    margin-top: 30vh;
-}
 
 .auth-input {
     width: 300px;
