--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,9 @@ body {
         display: none;
     }
     .auth_container {
-        text-align:center;
+        position: absolute;
+        top: 50%; left: 50%;
+        transform: translate(-50%,-50%);
     }
     
     .signin-form-container {
@@ -96,8 +98,6 @@ body {
         background-color: #F5F5DC;
         padding: 10px;
         width: 500px; 
-        margin: auto;
-        margin-top: 2vh;
     }
 }
 
