--- a/css/style.css
+++ b/css/style.css
@@ -22,12 +22,21 @@ button:not(#signin_button):not(#verify_button):not(#ok_button):not(#register_but
     text-align: center;
     overflow: hidden;
 }
+#leaderboard_container > h1 {
+    margin-top: 1px;
+    padding-bottom: 10px;
+}
+
+body {
+    text-align: center;
+    background-color: #9cd9b1 ;
+}
 
 @media only screen and (min-width: 1500px) {
     #leaderboard_container {
         margin-top: 2%;
         margin-right: 2%;
-        float: right;
+        display: inline-block;
         padding: 20px;
         border-radius: 15px;
         text-align: center;
@@ -71,25 +80,13 @@ button:not(#signin_button):not(#verify_button):not(#ok_button):not(#register_but
     }
 }
 
-
-
-#leaderboard_container > h1 {
-    margin-top: 1px;
-    padding-bottom: 10px;
-}
-
-body {
-    text-align: center;
-    background-color: #9cd9b1 ;
-}
-
 @media only screen and (max-width: 1270px) {
     .fluff_container {
         display: none;
     }
     .auth_container {
         position: absolute;
-        top: 50%; left: 50%;
+        top: 40%; left: 50%;
         transform: translate(-50%,-50%);
     }
     
